# ChangeLog for app-portage/ufed
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.78 2010/02/13 16:16:47 armin76 Exp $

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org> ufed-0.40.1.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #300519

  01 Feb 2010; Markos Chandras <hwoarang@gentoo.org> ufed-0.40.1.ebuild:
  Stable on amd64 wrt bug #300519

  26 Jan 2010; Tiago Cunha <tcunha@gentoo.org> ufed-0.40.1.ebuild:
  stable sparc, bug 300519

  20 Jan 2010; Brent Baude <ranger@gentoo.org> ufed-0.40.1.ebuild:
  stable ppc64, bug 300519

  19 Jan 2010; nixnut <nixnut@gentoo.org> ufed-0.40.1.ebuild:
  ppc stable #300519

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> ufed-0.40.1.ebuild:
  Stable for HPPA (bug #300519).

  14 Jan 2010; Christian Faulhammer <fauli@gentoo.org> ufed-0.40.1.ebuild:
  stable x86, bug 300519

*ufed-0.40.1 (27 Oct 2009)

  27 Oct 2009; Harald van Dĳk <truedfx@gentoo.org> +ufed-0.40.1.ebuild:
  Don't show profile flags as enabled with USE=-* (bug #290568 by Stefan
  Oswald); new tarball with all patches to date applied

*ufed-0.40-r11 (18 Jun 2009)

  18 Jun 2009; Harald van Dĳk <truedfx@gentoo.org> +ufed-0.40-r11.ebuild,
  +files/ufed-0.40-termsize-2.patch:
  Support flags with too many descriptions to fit on one screen (#273309 by
  ulm)

  08 Aug 2008; nixnut <nixnut@gentoo.org> ufed-0.40-r10.ebuild:
  Stable on ppc wrt bug 233644

  04 Aug 2008; Jeroen Roovers <jer@gentoo.org> ufed-0.40-r10.ebuild:
  Stable for HPPA (bug #233644).

  04 Aug 2008; Santiago M. Mola <coldwind@gentoo.org> ufed-0.40-r10.ebuild:
  amd64 stable wrt bug #233644, thanks to Chad A. Simmons.

  03 Aug 2008; Raúl Porcel <armin76@gentoo.org> ufed-0.40-r10.ebuild:
  alpha/ia64/x86 stable wrt #233644

  02 Aug 2008; Markus Rothe <corsair@gentoo.org> ufed-0.40-r10.ebuild:
  Stable on ppc64; bug #233644

  01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> ufed-0.40-r10.ebuild: