@@ -12,7 +12,7 @@ AUX ufed-0.40.1-prefix.patch 4404 RMD160 4ded0f46355eccb16e94782a93bde0acf619ba9
 DIST ufed-0.40.1.tar.bz2 78242 RMD160 df3c0334b7dc8e9cb5beea517034196d622285ad SHA1 f7f7d0633057da905f28119674c9957636747822 SHA256 bd2b6dcc22d7b14794cf871187cbead00a0530eda5a41cccf99d882bd2a44706
 DIST ufed-0.40.tar.bz2 20288 RMD160 f360eb01f952acb4f52cfa571927a523f1fe3015 SHA1 a20e980972123e424fdef14001dace14ca1a6b73 SHA256 85d8894b7d163dacf7dfc94fff4e8c4a9cbb0302a66fc7e545a6d5c1c6c9318c
 EBUILD ufed-0.40-r10.ebuild 1303 RMD160 d108313fb4bbfd27169fc6d1491fe7bd8a4f0366 SHA1 339ac2560d18d4f48073d9b9dcbafaad39db02ae SHA256 28c5a11d5434b4d0ee4de3355ffab09919a5e28edba1bcf628a7825db951e79a
-EBUILD ufed-0.40-r11.ebuild 1334 RMD160 aa20fbf121153b10bf2e64549aa01b2ad34a9b0e SHA1 887ff71f5c9b9de917b3f7a295570c150801daeb SHA256 096ea7000a3a4b18299adeb20fada99a2975196fe9062525ac07a8b2e2a20d91
+EBUILD ufed-0.40-r11.ebuild 1321 RMD160 9034b90f71232d8c38c9a3dfc88555566c2592dc SHA1 148f7f320610ec4e84bff66f6681e765d7db2b1d SHA256 eed9d3fe3c06edff0ee6cc3050881e4c59a4b4629a85d86e9cba9dd317490268
 EBUILD ufed-0.40.1.ebuild 842 RMD160 2302102b5b898dfa2d794da68ebecca27494c188 SHA1 b97688d3ff6b04cecd6adfbee31b3d48efbef07f SHA256 cbd6c57e03fd140012f631f8e5130a5775a8a0031c772bb61cfe1168e6d47db9
-MISC ChangeLog 10977 RMD160 a9e1f079ced64181794b1deaa92a184586b906f5 SHA1 7df74c2a627e250f5fb36af44aac3b1264c1cb0a SHA256 b20ad3e8ceb79cae9a6ba7b9934506c86bc19fc4a597e3cba6ad12cd3a531b37
+MISC ChangeLog 11273 RMD160 216c27f9ad90b4805a6b666149b8394d5292ff92 SHA1 c4e01ea27546bae773b78feab9343e320e14cfbc SHA256 6a83bec034b29f9fa46c6a0964ff471e376624b73e785da12ad59e034756e695
 MISC metadata.xml 256 RMD160 338deafc839d9e041e7c2df1ad9f3d73da67c096 SHA1 437b2fe5a9ddf258e30d77483bea041d998381de SHA256 52559b22087ad96b3cc63918a82c69515b3efdb8ca7735746698650bf62bb8b5
