@@ -1,10 +1,10 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ufed-0.40-r11.ebuild,v 1.1 2009/06/18 17:16:19 truedfx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ufed-0.40-r11.ebuild,v 1.3 2010/03/31 13:54:12 ssuominen Exp $
 
 EAPI=2
 
-inherit eutils prefix
+inherit eutils toolchain-funcs prefix
 
 DESCRIPTION="Gentoo Linux USE flags editor"
 HOMEPAGE="http://www.gentoo.org/"
@@ -35,9 +35,9 @@ src_prepare() {
 	eprefixify Portage.pm ufed-curses-help.c ufed.pl
 }
 
-src_compile() {
-	./configure || die "configure failed"
-	emake || die "make failed"
+src_configure() {
+	tc-export CC
+	./configure || die
 }
 
 src_install() {
