@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/ufed
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.78 2010/02/13 16:16:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.80 2010/03/31 13:54:12 ssuominen Exp $
+
+  31 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> ufed-0.40-r11.ebuild:
+  Don't use econf for non-autoconf based ./configure script.
+
+  31 Mar 2010; Christian Ruppert <idl0r@gentoo.org> ufed-0.40-r11.ebuild:
+  Don't run configure twice also use default src_compile since it does the same.
 
   13 Feb 2010; Raúl Porcel <armin76@gentoo.org> ufed-0.40.1.ebuild:
   alpha/arm/ia64/m68k/s390/sh stable wrt #300519
